<resources>
    <string name="app_name"></string>
    <string name="t_splah">"Hitung Pajak Yuk "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_hitung_pajak_home">Hitung Pajak</string>
    <string name="t_pajak_penghasilan">Pajak Penghasilan (PPH)</string>
    <string name="t_pajak_bumi_bangunan">Pajak Bumi dan Bangunan (PBB)</string>
    <string name="t_pajak_kendaraan_bermotor">Pajak Kendaraan Bermotor (PKB)</string>
    <string name="t_penghasilan">Masukan Gaji Anda</string>
    <string name="t_about">"About "</string>
    <string name="t_nilai1">Masukan Nilai Bangunan :</string>
    <string name="t_nilai2">Luas Bangunan :</string>
    <string name="t_nilai_3">Harga Bangunan :</string>
    <string name="t_nilai4">Masukan Nilai Tanah :</string>
    <string name="t_nilai5">Luas Tanah :</string>
    <string name="t_nilai6">Harga Tanah :</string>
    <string name="t_home" />
    <string name="t_kendaraan1">Masukan Harga Kendaraan :</string>
    <string name="t_kendaraan2">Urutan Kepemilikan Kendaraan :</string>
    <string name="t_penghasilan1">Gaji :</string>
    <string name="t_penghasilan2">Penghasilan Kotor Anda :</string>
    <string name="t_penghasilan3">(Bulan) :</string>
    <string name="tv_gaji">5.000.000</string>
    <string name="t_penghasilan4">Penghasilan Bersih Anda :</string>
    <string name="t_penghasilan5">Rp.</string>
    <string name="tv_gaji2">60.000.000</string>
    <string name="t_penghasilan6">(PTKP) :</string>
    <string name="t_penghasilan7">Pajak Penghasilan Anda :</string>
    <string name="tv_gaji3">6.000.000</string>
    <string name="t_penghasilan8">* 15% :</string>
    <string name="tv_gaji4">900.000</string>
    <string name="t_penghasilan9">(Bulan)</string>
    <string name="t_info1">Info :</string>
    <string name="t_info2">PTKP (Pajak Tidak Kena Pajak)</string>
    <string name="t_info3">Rp.54.000.000</string>
    <string name="t_info4">"Rp.63.000.000 "</string>
    <string name="t_info5">"Rp.67.500.000 "</string>
    <string name="t_info6">RP.72.000.000</string>
    <string name="t_info7">Info Lebih Lanjut Hubungi :</string>
    <string name="t_info8">https://www-online-pajak.com/</string>
    <string name="t_bangunan1">Nilai Bangunan :</string>
    <string name="tv_luas_bangunan">50</string>
    <string name="t_bangunan2">*</string>
    <string name="tv_harga_bangunan">500.000</string>
    <string name="t_bangunan3">:</string>
    <string name="tv_hasil_bangunan1">25.000.000</string>
    <string name="t_bangunan4">Rp.</string>
    <string name="t_bangunan5">Nilai Tanah :</string>
    <string name="tv_luas_tanah">100</string>
    <string name="tv_harga_tanah">1.000.000</string>
    <string name="tv_hasil_tanah">100.000.000</string>
    <string name="t_bangunan6">NJOP :</string>
    <string name="t_bangunan7">Nilai Bangunan + Nilai Tanah :</string>
    <string name="t_total_njop">125.000.000</string>
    <string name="t_bangunan8">NJKP :</string>
    <string name="t_bangunan9">20 % * NJOP :</string>
    <string name="tv_hasil_njkp">25.000.000</string>
    <string name="t_bangunan10">0,5 % * NJKP :</string>
    <string name="tv_hasil_pbb">125.000</string>
    <string name="t_bangunan11">PBB :</string>
    <string name="t_status_penghasilan">Status Pajak :</string>
    <string name="t_masa_penghasilan">Masa Penghasilan :</string>
    <string name="t_hasil_kendaraan1">Harga Kendaraan :</string>
    <string name="t_hasil_kendaraan2">Pajak Kendaraan Motor :</string>
    <string name="t_hasil_kendaraan0">Kepemilikan Kendaraan :</string>
    <string name="t_hasil_kendaraan3">3000000</string>
    <string name="tv_hasil_kendaraan">450.000</string>
    <string name="tv_harga_kendaraan">30.000.000</string>
    <string name="tv_kepemilikan">1</string>
    <string name="t_info0">Status Pajak :</string>
    <string name="t_info_kendaraan1">Urutan Kepemilikan :</string>
    <string name="t_info_kendaraan2">Tarif Pajak :</string>
    <string name="t_info_kendaraan3">- Kepemilikan Pertama</string>
    <string name="t_info_kendaraan4">- Kepmilikan Kedua</string>
    <string name="t_info_kendaraan5">"- Kepemilikan Ketiga "</string>
    <string name="t_info_kendaraan6">- Kepemilikan Keempat</string>
    <string name="t_info_kendaraan7">1,5 %</string>
    <string name="t_info_kendaraan8">2% (Kenaikan)</string>
    <string name="t_info_kendaraan9">2,5 % (Kenaikan)</string>
    <string name="t_info_kendaraan10">3 % (Kenaikan)</string>
    <string name="t_info9">- TK/0</string>
    <string name="t_info10">- K/1</string>
    <string name="t_info11">- K/2</string>
    <string name="t_info12">- K/3</string>
    <string name="t_info_penghasilan" />
    <string name="t_info_kendaraan" />
    <string name="t_info_bumibangunan" />
    <string name="t_judul_splash">Z-TAX</string>
    <string name="t_copyright">Z-Tax 2020 copyright</string>
    <string name="t_penghasilan10">Metode Gross</string>
    <string name="t_penghasilan11">(Gaji Kotor Tanpa Tunjangan Pajak)</string>
    <string name="t_penghasilan12">1</string>
    <string name="t_penghasilan13">-</string>
    <string name="t_penghasilan14">1</string>
    <string name="tv_penghasilan16">1</string>
    <string name="t_kendaraan4">1.5</string>
    <string name="t_kendaraan5">% :</string>
    <string name="t_tahun">/Tahun</string>
    <string name="t_bulan">/Bulan</string>
</resources>
